[PAGOPA-1967] feat: Update Stamp converter (#108)
decode from base64 and keep the marshalling time base64 encoding for SANP compliance